[INTL] Handle error in defineProperty for supported locales length https://bugs.webkit.org/show_bug.cgi?id=185623

Patch by Andy VanWagoner <andy@vanwagoner.family> on 2018-05-14
Reviewed by Saam Barati.

Adds the missing RETURN_IF_EXCEPTION after defineOwnProperty for the
length of the supported locales array.

* runtime/IntlObject.cpp:
(JSC::supportedLocales):

Canonical link: https://commits.webkit.org/201093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231772 268f45cc-cd09-0410-ab3c-d52691b4dbfc